--- a/BookStore.Core.Components/wwwroot/common.css
+++ b/BookStore.Core.Components/wwwroot/common.css
@@ -1,3 +1,31 @@
-﻿html, body, * {
+﻿:root {
+    --color-main: #075e89;
+    --color-main-light: #267fac;
+    --color-main-dak: #043b55;
+    --color-very-light-gray: #ece4e4;
+    --color-light-black: #444;
+}
+
+html, body, * {
     font-family: "Poppins", sans-serif;
+}
+
+html, body{
+    background-color: #f5f5fb;
+}
+
+.bg-main{
+    background-color: var(--color-main);
+}
+
+.bg-main-light {
+    background-color: var(--color-main-light);
+}
+
+.bg-main-dark {
+    background-color: var(--color-main-dak);
+}
+
+.taxt-main{
+    color: var(--color-main);
 }
