--- a/BookStore.Mobile/wwwroot/css/app.css
+++ b/BookStore.Mobile/wwwroot/css/app.css
@@ -1,6 +1,6 @@
-﻿html, body {
+﻿/*html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
+}*/
 
 a, .btn-link {
     color: #006bb7;
