--- a/BookStore.Web/Components/_Imports.razor
+++ b/BookStore.Web/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using BookStore.Web
 @using BookStore.Web.Components
 @using Microsoft.AspNetCore.Components.Sections
+@using BookStore.Core.Dtos
+@using BookStore.Core.Interfaces
