--- a/BookStore.Web/Components/Layout/NavMenu.razor.css
+++ b/BookStore.Web/Components/Layout/NavMenu.razor.css
@@ -1,4 +1,4 @@
-.navbar-toggler {
+/*.navbar-toggler {
     appearance: none;
     cursor: pointer;
     width: 3.5rem;
@@ -95,11 +95,11 @@
     }
 
     .nav-scrollable {
-        /* Never collapse the sidebar for wide screens */
+         Never collapse the sidebar for wide screens 
         display: block;
 
-        /* Allow sidebar to scroll for tall menus */
+         Allow sidebar to scroll for tall menus 
         height: calc(100vh - 3.5rem);
         overflow-y: auto;
     }
-}
+}*/
