--- a/BookStore.Web/Components/Pages/Home.razor
+++ b/BookStore.Web/Components/Pages/Home.razor
@@ -1,7 +1,11 @@
-﻿@page "/"
+﻿@page "/WE_DONT_NEED_IT"
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<SectionContent SectionName="PageTitle">
+	<h1 class="m-0 text-white">Buddy's Books</h1>
+</SectionContent>
 
-Welcome to your new app.
+<div class="container-lg">
+
+</div>
