--- a/BookStore.Core.Components/wwwroot/common.css
+++ b/BookStore.Core.Components/wwwroot/common.css
@@ -14,6 +14,10 @@ html, body{
     background-color: #f5f5fb;
 }
 
+a{
+    text-decoration: none;
+}
+
 .bg-main{
     background-color: var(--color-main);
 }
@@ -28,4 +32,10 @@ html, body{
 
 .taxt-main{
     color: var(--color-main);
+}
+
+.heading{
+    font-weight: bold;
+    font-size: 20px;
+    color: #444;
 }
