Add book detail page

--- a/BookStore.Core.Components/Pages/Books.razor
+++ b/BookStore.Core.Components/Pages/Books.razor
@@ -61,11 +61,11 @@
 					@foreach (var book in _popularBooks)
 					{
 						<div class="popular-book-item">
-							<a href="/book/@book.Id" title="@book.Title">							
+							<a href="/books/@book.Id" title="@book.Title">							
 								<img src="@book.Image" alt="book.Title" class="me-3"/>
 							</a>
 							<div class="d-flex flex-column justify-content-center">
-								<a href="/book/@book.Id" class="book-title" title="@book.Title">@book.Title</a>
+								<a href="/books/@book.Id" class="book-title" title="@book.Title">@book.Title</a>
 								<a href="/authors/@book.Author.Slug/books" title="Books by @book.Author.Name" class="book-author">by @book.Author.Name</a>
 							</div>
 						</div>
