--- a/BookStore.Core.Components/Shared/PopularBooks.razor
+++ b/BookStore.Core.Components/Shared/PopularBooks.razor
@@ -1,5 +1,25 @@
-﻿<h3>PopularBooks</h3>
+﻿<div class="right-box">
 
+	<h3 class="heading m-0 mt-2 text-center py-3 bg-white heading">Popular Books</h3>
+	<div class="popular-books-list">
+		@foreach (var book in PopularBooksList)
+		{
+			<div class="popular-book-item">
+				<a href="/books/@book.Id" title="@book.Title">
+					<img src="@book.Image" alt="book.Title" class="me-3" />
+				</a>
+				<div class="d-flex flex-column justify-content-center">
+					<a href="/books/@book.Id" class="book-title" title="@book.Title">@book.Title</a>
+					<a href="/authors/@book.Author.Slug/books" title="Books by @book.Author.Name" class="book-author">by @book.Author.Name</a>
+				</div>
+			</div>
+		}
+	</div>
+
+</div>
 @code {
+	[Parameter, EditorRequired]
+	public BookListDto[] PopularBooksList { get; set; } = [];
+
 
 }
