--- a/BookStore.Core.Components/_Imports.razor
+++ b/BookStore.Core.Components/_Imports.razor
@@ -2,3 +2,4 @@
 @using Microsoft.AspNetCore.Components.Sections
 @using BookStore.Core.Dtos
 @using BookStore.Core.Interfaces
+@using BookStore.Core.Components.Shared
