--- a/BookStore.Core.Components/Pages/AuthorBooks.razor
+++ b/BookStore.Core.Components/Pages/AuthorBooks.razor
@@ -18,12 +18,12 @@
 		<div class="col-md-9">
 			<div class="row">
 				<h3 class="mt-2 mb-3 heading">@_heading</h3>
-				
+				<BooksGrid Books="_authorBooks" />
 			</div>
 		</div>
 
 		<div class="col-md-3">
-
+			<PopularBooks PopularBooksList="_popularBooks"/>
 		</div>
 	</div>
 </div>
