--- a/BookStore.Core.Components/Pages/Books.razor
+++ b/BookStore.Core.Components/Pages/Books.razor
@@ -32,7 +32,7 @@
 
 				<h3 class="mt-2 mb-3 heading">@_heading</h3>
 
-				<div class="row">
+				@* <div class="row">
 					@foreach(var book in _books)
 					{
 						<div class="book-block col-sm-6 col-lg-3">
@@ -48,13 +48,16 @@
 							</a>
 						</div>
 					}
-				</div>
+				</div> *@
+
+				<BooksGrid Books="_books" />
+
 			</div>
 		</div>
 
 		<div class="col-md-3">
 
-			<div class="right-box">
+			@* <div class="right-box">
 
 				<h3 class="heading m-0 mt-2 text-center py-3 bg-white heading">Popular Books</h3>
 				<div class="popular-books-list">
@@ -72,7 +75,9 @@
 					}
 				</div>
 				
-			</div>
+			</div> *@
+
+			<PopularBooks PopularBooksList="_popularBooks"/>
 
 		</div>
 	</div>
