--- a/BookStore.Mobile/Components/Routes.razor
+++ b/BookStore.Mobile/Components/Routes.razor
@@ -1,4 +1,5 @@
-﻿<Router AppAssembly="@typeof(MauiProgram).Assembly">
+﻿<Router AppAssembly="@typeof(MauiProgram).Assembly" 
+AdditionalAssemblies="new[]{typeof(BookStore.Core.Components.Pages.Books).Assembly}">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
