--- a/BookStore.Mobile/Components/Layout/InnerPageLayout.razor
+++ b/BookStore.Mobile/Components/Layout/InnerPageLayout.razor
@@ -1,5 +1,8 @@
-﻿<h3>InnerPageLayout</h3>
+﻿@inherits LayoutComponentBase
 
-@code {
+<Navbar IsInnerPage>
+	<SectionOutlet SectionName="PageTitle" />
+</Navbar>
+@Body
+	
 
-}
