--- a/BookStore.Mobile/Components/Layout/MainLayout.razor
+++ b/BookStore.Mobile/Components/Layout/MainLayout.razor
@@ -16,6 +16,9 @@
     </main>
 </div> *@
 
-<Navbar/>
+<Navbar>
+    <SectionOutlet SectionName="PageTitle"/>
+    Blazing Books
+</Navbar>
 @Body
 <Tabbar/>
