--- a/BookStore.Mobile/Components/_Imports.razor
+++ b/BookStore.Mobile/Components/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.JSInterop
 @using BookStore.Mobile
 @using BookStore.Mobile.Components
+@using Microsoft.AspNetCore.Components.Sections
