--- a/BookStore.Core.Components/Pages/Genres.razor
+++ b/BookStore.Core.Components/Pages/Genres.razor
@@ -1,12 +1,21 @@
 ﻿@page "/genres"
 
 @inject IBookService bookService
+@inject ICommonService commonService
 
 <PageTitle>All Genres | Buddy's Books</PageTitle>
 
 <SectionContent SectionName="PageTitle">
-	<h1 class="m-0 text-white fw-bold">Buddy's Books</h1>
-	<h3 class="text-white mt-2">Hundreds of books for your pleasure</h3>
+
+	@if (commonService.IsWeb)
+	{
+		<h1 class="m-0 text-white fw-bold">All Genres</h1>
+
+	}
+	else
+	{
+		<span>All Genres</span>
+	}
 </SectionContent>
 
 <div class="container mt-5 ">
