--- a/BookStore.Mobile/Components/_Imports.razor
+++ b/BookStore.Mobile/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using BookStore.Mobile
 @using BookStore.Mobile.Components
 @using Microsoft.AspNetCore.Components.Sections
+@using BookStore.Core.Dtos
+@using BookStore.Core.Interfaces
