--- a/BookStore.Mobile/Components/Layout/Navbar.razor
+++ b/BookStore.Mobile/Components/Layout/Navbar.razor
@@ -7,8 +7,8 @@
 	else
 	{
 		<div class="row w-100">
-			<div class="col-1 d-flex">
-				<a href="javascript:history.back()" class="text-white h2 fw-bold my-auto">
+			<div class="col-1 d-flex align-items-center">
+				<a href="javascript:history.back()" class="text-white h2 fw-bold p-0">
 					&larr;
 				</a>
 			</div>
