--- a/BookStore.Mobile/MainPage.xaml
+++ b/BookStore.Mobile/MainPage.xaml
@@ -2,13 +2,46 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:BookStore.Mobile"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="BookStore.Mobile.MainPage"
-             BackgroundColor="{DynamicResource PageBackgroundColor}">
+             BackgroundColor="{DynamicResource PageBackgroundColor}"
+             x:DataType="{x:Type local:AppState}">
 
-    <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
-        <BlazorWebView.RootComponents>
-            <RootComponent Selector="#app" ComponentType="{x:Type local:Components.Routes}" />
-        </BlazorWebView.RootComponents>
-    </BlazorWebView>
+    <ContentPage.Behaviors>
+        <toolkit:StatusBarBehavior StatusBarColor="#075e89"
+                                   StatusBarStyle="LightContent"/>
+    </ContentPage.Behaviors>
+
+    <Grid>
+        <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
+            <BlazorWebView.RootComponents>
+                <RootComponent Selector="#app" ComponentType="{x:Type local:Components.Routes}" />
+            </BlazorWebView.RootComponents>
+        </BlazorWebView>
+
+        <Border IsVisible="{Binding IsLoaderVisible}"
+                StrokeShape="RoundRectangle 10"
+                StrokeThickness="0"
+                BackgroundColor="White"
+                HorizontalOptions="Center"
+                VerticalOptions="Center"
+                Padding="10">
+            <Border.Shadow>
+                <Shadow/>
+            </Border.Shadow>
+            <VerticalStackLayout HorizontalOptions="Center" 
+                                 VerticalOptions="Center"
+                                 Spacing="5">
+                <ActivityIndicator IsRunning="True"/>
+                <Label Text="{Binding LoaderMessage}"
+                       HorizontalOptions="Center"
+                       TextColor="#075e89"
+                       FontSize="18"/>
+            </VerticalStackLayout>
+        </Border>
+
+    </Grid>
+
+    
 
 </ContentPage>
