--- a/BookStore.Core.Components/Pages/Books.razor
+++ b/BookStore.Core.Components/Pages/Books.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @page "/page/{pageNo:int?}"
 
+@inject NavigationManager navManager
 
 @inject IBookService bookService
 @inject ICommonService commonService
@@ -71,6 +72,21 @@
 
 				<BooksGrid Books="_books" />
 
+				<div class="paging w-100">
+					@if (commonService.IsWeb)
+					{
+						<div class="d-flex justify-content-center align-items-center">
+							<Pagination PrevPageUrl="@_previousPageUrl" NextPageUrl="@_nextPageUrl"/>
+						</div>
+					}
+					else
+					{
+						<div class="d-flex justify-content-between align-items-center">
+							<Pagination PrevPageUrl="@_previousPageUrl" NextPageUrl="@_nextPageUrl" />
+						</div>						
+					}
+				</div>
+
 			</div>
 		</div>
 
@@ -106,10 +122,13 @@
 	private const int PageSize = 16;
 
 	[Parameter]
-	public int? PageNo { get; set; } = 1;
+	public int? PageNo { get; set; }
 
 	[SupplyParameterFromQuery(Name = "genre")]
 	public string? GenreSlug { get; set; }
+
+	private string? _nextPageUrl;
+	private string? _previousPageUrl;
 
 	private GenreDto[] _genres = [];
 	private BookListDto[] _books = [];
@@ -120,15 +139,24 @@
 
 	protected override async Task OnParametersSetAsync()
 	{
+		if(PageNo < 2)
+		{
+			navManager.NavigateTo("/?genre=");
+			return;
+		}
+
 		commonService.ShowLoader("Loading...");
 
 		var genreTask = bookService.GetGenresAsync(topOnly: false);
 		var booksTask = bookService.GetBooksAsync(PageNo ?? 1, PageSize, GenreSlug);
 		var popularTask = bookService.GetPopularBooksAsync(10);
 
+
 		_genres = await genreTask;
 		(_books, _totalCount) = await booksTask;
 		_popularBooks = await popularTask;
+
+		SetPagingUrls();
 
 		if (!string.IsNullOrWhiteSpace(GenreSlug))
 		{
@@ -146,7 +174,60 @@
 		{
 			_heading = "Top Books";
 		}
+
+		if(PageNo > 1)
+		{
+			_heading += $" | Page {PageNo}";
+		}
+
 		commonService.HideLoader();
 
+	}
+
+	private void SetPagingUrls()
+	{
+		var currentPageBookCount = _books.Length;
+
+		var parts = navManager.Uri.Split('?');
+		var queryString = "";
+
+		if (parts.Length > 1)
+		{
+			queryString = $"?{parts[1]}";
+		}
+		if (PageNo is null || PageNo == 1)
+		{
+			_previousPageUrl = null;
+			if(currentPageBookCount < PageSize)
+			{
+				_nextPageUrl = null;
+			}
+			else
+			{
+				_nextPageUrl = $"/page/2{queryString}";
+			}
+		}
+		else
+		{
+			if (PageNo > 2)
+			{
+				_previousPageUrl = $"/page/{(PageNo - 1)}{queryString}";
+			}
+			else
+			{
+				_previousPageUrl = $"/{queryString}";
+			}
+
+			if (currentPageBookCount < PageSize)
+			{
+				_nextPageUrl = null;
+			}
+			else
+			{
+				_nextPageUrl = $"/page/{(PageNo + 1)}{queryString}";
+			}
+			
+
+		}
 	}
 }
