--- a/BookStore.Web/Components/Layout/NavMenu.razor
+++ b/BookStore.Web/Components/Layout/NavMenu.razor
@@ -2,10 +2,10 @@
 
 	<div class="container">
 		<a href="/" class="navbar-brand fw-bold">Buddy's Books</a>
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
+		<button id="navbar-toggler-btn" class="navbar-toggler bg-main" type="button" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="text-white">☰</span>
 		</button>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav ms-auto">
 			<li class="nav-item">
 				<a class="nav-link active" aria-current="page" href="/">Home</a>
